--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,7 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4"
-handlebars = "6"
+handlebars = { version = "5.1.2", features = ["dir_source"] }
+serde = { version = "1.0" , features = ["derive"]}
+reqwest = { version = "0.12.7", features = ["json"] }
+serde_json = "1.0.128"
