--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = "4"
+actix-web = { version = "4" }
+actix-files = "0.6.6"
 handlebars = { version = "5.1.2", features = ["dir_source"] }
 serde = { version = "1.0" , features = ["derive"]}
 reqwest = { version = "0.12.7", features = ["json"] }
