--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 actix-web = { version = "4" }
 actix-files = "0.6.6"
+actix-session = { version = "0.10.1", features = ["cookie-session"] }
 handlebars = { version = "5.1.2", features = ["dir_source"] }
 serde = { version = "1.0" , features = ["derive"]}
 reqwest = { version = "0.12.7", features = ["json"] }
